--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
 
-<ul>
+<ul class="flexbox">
         <li><a class="active" href="#home">Home</a></li>
         <li><a href="#news">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
