--- a/main.html
+++ b/main.html
@@ -14,8 +14,16 @@
         <li><a href="#about">GitHub</a></li>
         
 </ul>    
-   
 <h1>Work in progress.</h1>
+
+<div class="grid">
+    <div class="gitem1">1</div>
+    <div class="gitem2">2</div>
+    <div class="gitem3">3</div>
+
+</div>
+   
+
 
 </body>
 </html> 
