--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
  <!DOCTYPE html>
 <html>
-<title>Grakauskas Works</title>
+<title>Grakauskas.dev</title>
 <body>
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet"> 
