--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 
 <ul class="flexbox">
-        <li><a class="active" href="#home">Home</a></li>
+        <li><a class="active" href="main.html">Home</a></li>
         <li><a href="#news">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><a href="#about">GitHub</a></li>
@@ -17,11 +17,31 @@
 <h1>Work in progress.</h1>
 
 <div class="grid">
-    <div class="gitem1">1</div>
-    <div class="gitem2">2</div>
-    <div class="gitem3">3</div>
+    <div class="gitem1">Ubuntu is built on Debian's architecture and infrastructure, and comprises Linux server, desktop and discontinued phone
+         and tablet operating system versions.[27] Ubuntu releases updated versions predictably every six months,[28] and each release receives free support for nine months 
+         (eighteen months prior to 13.04)[29] with security fixes,
+          high-impact bug fixes and conservative, substantially beneficial low-risk bug fixes.[30] The first release was in October 2004. </div>
+    <div class="gitem2">Ubuntu is built on Debian's architecture and infrastructure, and comprises Linux server, desktop and discontinued phone and tablet operating system versions.[27] Ubuntu releases updated versions predictably every six months,[28] and each release receives free support for nine months (eighteen months prior to 13.04)[29] with security fixes, high-impact bug fixes and conservative, substantially beneficial low-risk bug fixes.[30] The first release was in October 2004. </div>
+    <div class="gitem3">
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            
+
+        </ul>
+
+    
+    </div>
 
 </div>
+
+<div style="position: relative; width: auto; height: 20px;">    
+
+        <div style="position: absolute; bottom: 5px;">
+        Grakausas.dev sandbox
+        </div>
+    </div>
    
 
 
