pushing old files

--- a/main.html
+++ b/main.html
@@ -7,9 +7,12 @@
 
 <header>
 <h1>BIG BRIGHT HELLO SIGN</h1>
+<div class="header-links">
+    <h3>Twitter</h3>
+    <h3>GitHub</h3>
+</div>
 </header>
 
-<h2 class="title" id="t1">About me</h2>
 
 <div class="content">
 <img src="pic.png">
@@ -17,9 +20,9 @@
     with both community and professional support. Ubuntu is a complete Linux operating system, freely available 
     with both community and professional support. 
 </h3>
+
 </div> 
 
-<h2 class="title" id="t2">My skills</h2>
 
 <div class="skills">
     <div class="s1">
@@ -44,7 +47,6 @@
     </div> 
 </div>
 
-<h2 class="title" id="t3">My work</h2>
 
 <section class="work">
     <img src="ex1.jpg">
@@ -56,7 +58,6 @@
     
 </section>
 
-<h2 class="title" id="t4">Contact</h2>
 
 <script src="script.js"></script>
 </body>
