--- a/main.html
+++ b/main.html
@@ -7,15 +7,15 @@
 
 <header>
 <h1>BIG BRIGHT HELLO SIGN</h1>
+
 <div class="header-links">
     <h3>Twitter</h3>
     <h3>GitHub</h3>
 </div>
 </header>
 
-
 <div class="content">
-<img src="pic.png">
+<img id='prof', src="pic.png">
 <h3>Ubuntu is a complete Linux operating system, freely available 
     with both community and professional support. Ubuntu is a complete Linux operating system, freely available 
     with both community and professional support. 
@@ -35,6 +35,7 @@
             <li>Node.js</li>
             <li>React</li>
             <li>Vue.js</li>
+            <li>Express</li>
         </ul>
     </div>
     <div class="s1">
